--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+<head>
+  <title>NeyLePro | Skyblock</title>
+<div id="nav">
+  <nav><a href="/stats">Sb Stats</a> | <a href="/optimize">Sb Optimizer</a> | <a href="/wiki">Sb Wiki</a>
+    </div>
+  </head>
+  </html>
