--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>NeyLePro | Skyblock</title>
 <div id="nav">
-  <nav><a href="/stats">Sb Stats</a> | <a href="/optimize">Sb Optimizer</a> | <a href="/wiki">Sb Wiki</a>
+  <nav><a href="https://neylepro.cf">Home</a> | <a href="/stats">Sb Stats</a> | <a href="/optimize">Sb Optimizer</a> | <a href="/wiki">Sb Wiki</a>
     </div>
   </head>
   </html>
