--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script>document.location.href="httpS
+<script>Document.location.href="httpS
 s:www.hypixel-skyblock.fandom.com"</script>
   </head>
 </html>
