--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<script>Document.location.href="httpS
-s:www.hypixel-skyblock.fandom.com"</script>
+<script>Document.location.href="www.hypixel-skyblock.fandom.com"</script>
   </head>
 </html>
