--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
-<head>
-<script>Document.location.href="www.hypixel-skyblock.fandom.com"</script>
+  <head>
+  <meta http-equiv="refresh" content="0;URL=https://hypixel-skyblock.fandom.com">
   </head>
 </html>
