--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-  <meta http-equiv="refresh" content="0;URL=https://hypixel-skyblock.fandom.com">
+ <iframe url="https://google.com">
   </head>
 </html>
