--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
- <iframe src="https://google.com">
+ <iframe src="https://hypixel-skyblock.fandom.com" title="">
   </head>
 </html>
