--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
- <iframe src="https://hypixel-skyblock.fandom.com" title="">
+    <iframe src="https://hypixel-skyblock.fandom.com" title=""></iframe>
   </head>
 </html>
