--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <iframe src="https://hypixel-skyblock.fandom.com" title=""></iframe>
+    <iframe src="https://hypixel-skyblock.fandom.com" title="" heigth="800" width="1000"></iframe>
   </head>
 </html>
