--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <iframe src="https://hypixel-skyblock.fandom.com" title="" heigth="100%" width="100%"></iframe>
+    <iframe src="https://hypixel-skyblock.fandom.com" title="" style="position: absolute; height: 100%; border: none"></iframe>
   </head>
 </html>
