--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
   <title>NeyLePro | Skyblock</title>
-<div id="nav">
+<script src="particles.js"
+  <div id="nav">
   <nav><a href="https://neylepro.cf">Home</a> | <a href="/stats">Sb Stats</a> | <a href="/optimize">Sb Optimizer</a> | <a href="/wiki">Sb Wiki</a>
     </div>
+    <div class="particle-js"></div>
   </head>
   </html>
