--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<html>
-<head>
-  <title>NeyLePro | Skyblock</title>
-  <div id="nav">
-  <nav><a href="https://neylepro.cf">Home</a> | <a href="/stats">Sb Stats</a> | <a href="/optimize">Sb Optimizer</a> | <a href="/wiki">Sb Wiki</a>
-    </div>
-   
-</head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <title>NeyLePro | Skyblock</title>
+    <link rel="stylesheet" href="style.css">
+   </head>
+<body>
+  <ul class="nav-links">
+    <li><a href="#">Home</a></li>
+    <li class="center"><a href="/stats">Stats</a></li>
+    <li class="upward"><a href="/optimizer">Optimizer</a></li>
+    <li class="forward"><a href="/wiki">Wiki</a></li>
+  </ul>
+
+</body>
 </html>
