--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<!-- Coding by CodingLab |www.youtube.com/CodingLabYT-->
+
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> All Navigation Menu Hover Animation | CodingLab </title>
+    <title>Neylepro | Skyblock</title>
     <link rel="stylesheet" href="style.css">
    </head>
 <body>
   <ul class="nav-links">
-    <li><a href="#">Dashboard</a></li>
-    <li class="center"><a href="#">Portfolio</a></li>
-    <li class="upward"><a href="#">Services</a></li>
-    <li class="forward"><a href="#">Feedback</a></li>
+    <li><a href="#">Home</a></li>
+    <li class="center"><a href="/stats">Stats</a></li>
+    <li class="upward"><a href="/optimize">Optimizer</a></li>
+    <li class="forward"><a href="/wiki">Wiki</a></li>
   </ul>
 
 </body>
