--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li class="center"><a href="/stats">Stats</a></li>
     <li class="upward"><a href="/optimize">Optimizer</a></li>
     <li class="forward"><a href="/wiki">Wiki</a></li>
+    <li class="forward"><a href="/bazzar">Bazzar Checker</a></li>
   </ul>
 
 </body>
