--- a/stats/index.html
+++ b/stats/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<h1 align="center">Whoops !</h1>
-<p align="center">This feature not devlopped yet</p>
 </head>
-</html>
+<body>
+<div class="stats"><form method="post",action="#"><input name="username"></input>
+</body>
