--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
                 <a href="#" class="nav-links">Home</a>
             </li>
             <li>
-                <a href="#" class="nav-links">Products</a>
+                <a href="/stats" class="nav-links">Stats</a>
             </li>
             <li>
-                <a href="#" class="nav-links">About Us</a>
+                <a href="/optimizer" class="nav-links">Optimizer</a>
             </li>
             <li>
-                <a href="#" class="nav-links">Contact Us</a>
+                <a href="/wiki" class="nav-links">Wiki</a>
             </li>
             <li>
-                <a href="#" class="nav-links">Blog</a>
+                <a href="/bazzar" class="nav-links">Auction Tracker</a>
             </li>
         </ul>
     </nav>
