--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+<title>NeyLePro | Skyblock</title>
 <nav class="navbar">
         <span class="navbar-toggle" id="js-navbar-toggle">
             <i class="fas fa-bars"></i>
         </span>
-        <a href="#" class="logo">logo</a>
+        <a href="#" class="logo">NeySkyblock</a>
         <ul class="main-nav" id="js-menu">
             <li>
                 <a href="#" class="nav-links">Home</a>
