--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         }
 
         body {
+
+background-image: url("/img/b.PNG");
+
             font-family: 'Josefin Sans', sans-serif;
         }
 
