--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             margin: 0;
         }
 
+head {
+
+background-image: url("/img/b.PNG");
+
+}
         body {
 
 background-image: url("/img/b.PNG");
