--- a/index.html
+++ b/index.html
@@ -136,5 +136,11 @@ navBarToggle.addEventListener('click', function () {
 });
 
 </script>
+<div class="mtext">
+<h1>Skyblock but much better</h1>
+<div class="mtext2">
+<p>A skyblock site</p>
+</div>
+</div>
 </head>
 </html>
