--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ navBarToggle.addEventListener('click', function () {
 </head>
 <body>
 <div class="mtext">
-<h1>Skyblock but much better</h1>
+<h1 align="center" >Skyblock but much better</h1>
 <div class="mtext2">
-<p>A skyblock site</p>
+<p align="center" >A skyblock site</p>
 </div>
 </div>
 </body>
